ex-1.7./log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 8080
      targetPort: 8080
